@@ -1,5 +1,12 @@
 2007-10-12 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_paned.h, src/gimv_hpaned.h, src/gimv_vpaned.h: Removed.
+	* src/Makefile.am, src/gtkutil.[ch], src/gimv_prefs_win.c,
+	  src/gimv_thumb_win.c, src/gtk2-compat.c:
+	Follow the change.
+
+2007-10-12 Takuro Ashie <ashie@homa.ne.jp>
+
 	* configure.in, src/gimv_dupl_win.c, src/gimv_prefs_win.c,
 	  src/prefs_ui/prefs_ui_thumbwin.c, plugins/image_loader/prefs_spi.c:
 	Remove ENABLE_TREEVIEW.
